fix search icon not centered

--- a/www/less/main/components/buttons.less
+++ b/www/less/main/components/buttons.less
@@ -71,7 +71,7 @@
 		height: 33px;
 		display: inline-block;
 		padding: 0;
-		line-height: 33px;
+		line-height: 11px;
 		font-size: 12px;
 		&:hover {
 			padding-top: 1px;
